--- a/projeto.html
+++ b/projeto.html
@@ -92,9 +92,10 @@
     <!-- header section ends -->
 
     <!-- home section starts -->
-
+    <div class="parallax"></div>
     <section class="home" id="home">
-
+        
+        
         <div class="content">
             <h3> Produtos frescos e<span> organicos</span> para você</h3>
             <p> Somos o melhor mercado do momento. Criamos um jeito diferente de oferecer o frescor das feiras com
@@ -105,6 +106,7 @@
 
     </section>
 
+    <div class="parallax2"></div>
     <!-- home section ends-->
 
 
@@ -147,9 +149,6 @@
 
 
     </section>
-
-
-
     <!-- features sections ends-->
 
     <!-- products section starts-->
@@ -550,7 +549,7 @@
 
                 <div class="swiper-slide box">
                     <img src="imagens2/img12.png" alt="">
-                    <h3> MArgarina Qualy tradicional 500g </h3>
+                    <h3> Margarina Qualy tradicional 500g </h3>
                     <div class="price"> R$4,99 </div>
                     <div class="starts">
                         <i class="fas fa-star"></i>
@@ -566,6 +565,31 @@
         <!-- PRODUTOS, QUALQUER COISA ARRUMAR (ACHO QUE PRECCISA, MAS NAO SEI, FORTE ABRAÇO)-->
     </section>
     <!-- review section starts -->
+    <!---GRãos-->>
+    <section class="products" id="products">
+
+        <h1 class="heading"> <span> Grãos </span> </h1>
+        <div class="swiper product-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide box">
+                    <img src="imagens2/img13.png" alt="">
+                    <h3> Arroz branco Ville tipo 1.5kg </h3>
+                    <div class="price"> R$22,98 </div>
+                    <div class="starts">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <a href="#" class="btn"> Adicionar ao carrinho </a>
+                </div>
+            </div>
+        </div>
+        <!-- PRODUTOS, QUALQUER COISA ARRUMAR (ACHO QUE PRECCISA, MAS NAO SEI, FORTE ABRAÇO)-->
+    </section>
 
     <section class="review" id="review">
 
